fixes gap on desktop dark/light/mode

--- a/styles/style.css
+++ b/styles/style.css
@@ -29,8 +29,6 @@ body{
   z-index:-99;
   height: 100vh;
   color: rgb(34, 34, 34);
-  display: flex;
-  flex-direction: column;
 }
 
 .darkDiv{
@@ -38,7 +36,6 @@ body{
   position: relative;
   z-index:-98;
   height: 100vh;
-  flex-grow: 1;
 }
 
 .pad1{
